# RM-Armor-TemPlate

./: ArmorDetectors.yaml  CMakeLists.txt  README.md  debug.h  test.cpp
data/: 2024-08-31_22_52_31.avi
log/error/: 20240831-134432.7672  20240831-140436.3960  20240903-174433.8816  20240903-175031.42392  20240903-191056.20808  20240903-191608.45408  20240903-200739.22336  20240903-203111.43320  20240903-214211.44220  20240903-220244.16364  20240903-220720.39604  20240903-221052.37780  20240903-221214.37000  20240903-221427.8688  20240903-221523.45416  20240903-221755.3028  20240903-231240.27568  20240904-084215.21608  20240904-084335.6676  20240904-084751.40704  20240904-084947.43840  20240904-085349.43212  20240904-085625.36720  20240904-085738.42212
log/info/: 20240831-134411.7672  20240831-140030.10396  20240831-140415.3960  20240831-140815.11468  20240831-141051.13672  20240831-141136.9988  20240831-141602.30248  20240831-141728.23608  20240831-142127.22784  20240831-142502.22964  20240831-161718.10308  20240831-161749.32216  20240831-161822.22948  20240831-162223.9128  20240831-162437.35512  20240831-162605.8236  20240831-162613.32020  20240831-162657.33076  20240831-162940.34412  20240831-221330.34664  20240831-222234.37760  20240831-222441.38180  20240831-222547.17804  20240831-222912.17280  20240831-223030.35360  20240831-223142.17428  20240831-223250.34316  20240831-223448.37016  20240831-223526.13300  20240831-223605.9564  20240831-223830.6416  20240831-224044.36272  20240831-224402.27544  20240831-224515.8116  20240831-225225.14040  20240831-225313.39472  20240831-225442.11060  20240831-225756.32096  20240901-232235.35492  20240901-232643.22308  (+94 more)
log/warning/: 20240831-140051.10396  20240902-171256.22720  20240903-084908.21076  20240903-085000.32544  20240903-171829.47296  20240903-172216.28572  20240903-172735.17800  20240903-172813.17904  20240903-173817.45036  20240903-173858.46236  20240903-173921.9104  20240903-174102.37188  20240903-174243.20832  20240903-174433.8816  20240903-174837.13540  20240903-174917.24820  20240903-174942.32108  20240903-175030.42392  20240903-175442.44364  20240903-191042.20808  20240903-191133.37768  20240903-191553.45408  20240903-192143.41548  20240903-192433.12292  20240903-193505.46184  20240903-193754.44408  20240903-193903.47628  20240903-194218.21512  20240903-194541.40320  20240903-194708.38932  20240903-195430.45804  20240903-195701.37132  20240903-195853.33864  20240903-200725.22336  20240903-200759.36500  20240903-203057.43320  20240903-203154.25864  20240903-214012.42104  20240903-214156.44220  20240903-214507.39920  (+37 more)
src/Armor/include/: ArmorDetect.h  armor_tracker.h  autoaim.h  coordsolver.h  inference.h
src/Armor/predictor/include/: predictor.h
src/Armor/predictor/src/: predictor.cpp
src/Armor/src/: ArmorDetect.cpp  autoaim.cpp  coordsolver.cpp  inference.cpp
src/Camera/src/: ArmorDetect.cpp
src/Energy/detector/: inference.cpp  inference.h
src/Energy/include/: buff.h
src/Energy/predictor/include/: predictor.h
src/Energy/predictor/src/: predictor.cpp
src/Energy/src/: buff.cpp
src/Serial/include/: serialport.h
src/Serial/src/: serialport.cpp
src/general/: general.cpp  general.h
src/thread/include/: thread.h
src/thread/src/: thread.cpp
